# docs/swagger.json
@@ -3479,6 +3479,42 @@
                 }
             }
         },
+        "/offchain-tip-bot/assign-contract": {
+            "post": {
+                "description": "Create an assign contract when user want to deposit a specific token to contract",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OffChain",
+                    "TipBot",
+                    "Deposit"
+                ],
+                "summary": "OffChain Tip Bot - Create an assign contract",
+                "parameters": [
+                    {
+                        "description": "Create assign contract request",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateAssignContract"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.GetAssignedContract"
+                        }
+                    }
+                }
+            }
+        },
         "/profiles/": {
             "get": {
                 "description": "Get user profile",
@@ -4910,6 +4946,32 @@
                 }
             }
         },
+        "model.OffchainTipBotAssignContract": {
+            "type": "object",
+            "properties": {
+                "chain_id": {
+                    "type": "string"
+                },
+                "contract_id": {
+                    "type": "string"
+                },
+                "expired_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "token_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Token": {
             "type": "object",
             "properties": {
@@ -5204,6 +5266,17 @@
                     "type": "string"
                 },
                 "webhook_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.CreateAssignContract": {
+            "type": "object",
+            "properties": {
+                "token_symbol": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -6049,6 +6122,14 @@
                     "items": {
                         "$ref": "#/definitions/response.TwitterHashtag"
                     }
+                }
+            }
+        },
+        "response.GetAssignedContract": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.OffchainTipBotAssignContract"
                 }
             }
         },
